5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1679_1105.log
== SUBMITION (2019-04-25 16:57:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="Stark"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Lannister"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="Baratheon"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="Targaryen"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="Tyrell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Martell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Greyjoy"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Bolton"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.129382
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="Baratheon"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:57:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="Stark"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Lannister"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="Baratheon"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="Targaryen"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="Tyrell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Martell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Greyjoy"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Bolton"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.126753
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="Baratheon"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:57:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="Stark"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Lannister"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="Baratheon"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="Targaryen"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="Tyrell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Martell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Greyjoy"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Bolton"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.228868
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="Baratheon"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:57:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="Stark"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Lannister"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="Baratheon"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="Targaryen"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="Tyrell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Martell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Greyjoy"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Bolton"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.193452
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="Baratheon"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:57:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="Stark"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Lannister"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="Baratheon"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="Targaryen"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="Tyrell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Martell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Greyjoy"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Bolton"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.367561
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:57:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="Stark"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Lannister"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="Baratheon"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="Targaryen"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="Tyrell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Martell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Greyjoy"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Bolton"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.327753
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="Baratheon"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:57:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="Stark"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Lannister"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="Baratheon"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="Targaryen"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="Tyrell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="Martell"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Greyjoy"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Bolton"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.4371
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="Baratheon"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.135947
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.14354
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.26081
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.217358
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.168467
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.339096
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.652125
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.557929
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.457917
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.540643
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.478462
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.405452
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:17:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ")
	
	elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ")
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ")

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ")
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ")
	
else:
	print("Entrada: ", br)
	print("Casa: ")
	



-- EXECUTION TIME:
0.384929
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 14
    elif (br=="veado"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")
c= input("insira a casa: ")
if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Casa: ", c)
	



-- EXECUTION TIME:
0.136841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 5, in <module>
    c= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")
c= input("insira a casa: ")
if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Casa: ", c)
	



-- EXECUTION TIME:
0.132786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 5, in <module>
    c= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")
c= input("insira a casa: ")
if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Casa: ", c)
	



-- EXECUTION TIME:
0.18719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 5, in <module>
    c= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")
c= input("insira a casa: ")
if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Casa: ", c)
	



-- EXECUTION TIME:
0.250612
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 5, in <module>
    c= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")
c= input("insira a casa: ")
if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Casa: ", c)
	



-- EXECUTION TIME:
0.328186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 5, in <module>
    c= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")
c= input("insira a casa: ")
if (br=="lobo"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- EXECUTION TIME:
0.179785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 5, in <module>
    c= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:35:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- EXECUTION TIME:
0.112242
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Entrada invalida
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:35:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- EXECUTION TIME:
0.130553
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  tambaqui
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:35:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- EXECUTION TIME:
0.149787
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:35:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- EXECUTION TIME:
0.146286
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:35:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- EXECUTION TIME:
0.243982
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  tambaqui
Entrada invalida
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:35:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- EXECUTION TIME:
0.307896
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  tambaqui
Entrada invalida
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:37:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Entrada invalida")
	



-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:38:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Casa invalida")
	



-- EXECUTION TIME:
0.16743
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa invalida
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:38:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br= input("insira o brasao: ")

if (br=="lobo"):
	c="Stark"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="leao"):
	c="Lannister"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="veado"):
		c="Baratheon"
		print("Entrada: ", br)
		print("Casa: ", c)
		
elif (br=="dragao"):
	c="Targaryen"
	print("Entrada: ", br)
	print("Casa: ", c)

elif (br=="rosa"):
	c="Tyrell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif(br=="sol"):
	c="Martell"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="lula"):
	c="Greyjoy"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="esfolado"):
	c="bolton"
	print("Entrada: ", br)
	print("Casa: ", c)
	
elif (br=="Tully"):
	c="Tully"
	print("Entrada: ", br)
	print("Casa: ", c)
	
else:
	print("Entrada: ", br)
	print("Brasao invalido")
	



-- EXECUTION TIME:
0.14677
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
